# openenv-sql-lab

./: .env  .gitignore  README.md  __init__.py  client.py  hf_upload_exclude.txt  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  __init__.py  app.py
sql_lab/: client.py  models.py
sql_lab/server/: Dockerfile  app.py  environment.py  requirements.txt
